tests/negative/gold/field-constructor-test.gold
tests/negative/field-constructor-test.toit:26:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/field-constructor-test.toit:10:15: error: Can't access instance members before `super` call
    fun := :: foo
              ^~~
tests/negative/field-constructor-test.toit:15:9: error: Can't assign final field in dynamic part of constructor
    bar = 499
        ^
tests/negative/field-constructor-test.toit:14:9: note: Expression that switched to dynamic part
    fun := :: foo
        ^~
tests/negative/field-constructor-test.toit:18:16: error: Can't access instance members before `super` call
    block := : foo
               ^~~
tests/negative/field-constructor-test.toit:23:9: error: Can't assign final field in dynamic part of constructor
    bar = 499
        ^
tests/negative/field-constructor-test.toit:22:11: note: Expression that switched to dynamic part
    block := : foo
          ^~
tests/negative/field-constructor-test.toit:14:9: error: Field 'bar' not initialized on all paths before implicit super-call
    fun := :: foo
        ^~
tests/negative/field-constructor-test.toit:19:5: error: Field 'bar' not initialized on all paths
    super
    ^~~~~
tests/negative/field-constructor-test.toit:22:11: error: Field 'bar' not initialized on all paths before implicit super-call
    block := : foo
          ^~
Compilation failed
